--- a/FoodDeliveryApp.Web/Views/Order/History.cshtml
+++ b/FoodDeliveryApp.Web/Views/Order/History.cshtml
@@ -4,7 +4,12 @@
     ViewData["Title"] = "Order History";
 }
 
-<h2>Order List</h2>
+<div class="d-flex justify-content-between align-items-center mb-3">
+    <h2 class="mb-0">Order List</h2>
+    <a asp-controller="Order" asp-action="ExportAllOrders" class="btn btn-success"> Export All Orders</a>
+</div>
+
+@*<h2>Order List</h2>*@
 
 <table class="table table-bordered">
     <thead>
